[package]
name = "diffie_hellman_encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
x25519-dalek = "1"
rand = "0.8"
hex = "0.4"
rand_core = "0.6"
magic-crypt = "3.1.12"